/*
Copyright Â© 2024 NAME HERE <EMAIL ADDRESS>
*/
syntax = "proto3";

package pbdeviceReport;

option go_package = "nb/proto/pbdeviceReport";

import "pbcommon/pbcommon.proto";


message DeviceReportModel{
  int64 id = 1;
  string createdAt = 2;
  string updatedAt = 3;
  int32  rptNo = 4;
  string imei = 5;
  string firmwareEdition = 6;
  string reportTime = 7;
  string devModel = 8;
  string reportType = 9;
  int32 csq = 10;
  int32 dumpEnergy = 11;
  int32 stepNum = 12;
  int32 charging = 13;
  int32 status =14;
  string macs = 15;
  string latitude = 16;
  string longitude = 17;
  int32 flag = 18;
}

message FindDeviceReportArgs{
  pbcommon.PageInfo pageInfo = 1;
  DeviceReportModel query = 2;
}

message FindDeviceReportReplay{
  pbcommon.EnumCode code = 1;
  string msg = 2;
  DeviceReportModel data =3;
  repeated DeviceReportModel list = 4;
  int64 total = 5;
}

// UpPacketSN int    `json:"upPacketSN"`
// 	UpDataSN   int    `json:"upDataSN"`
// 	Topic      string `json:"topic"`
// 	Timestamp  int64  `json:"timestamp"`
// 	TenantID   string `json:"tenantId"`
// 	ServiceID  string `json:"serviceId"`
// 	Protocol   string `json:"protocol"`
// 	ProductID  string `json:"productId"`
// 	Payload    struct {
// 		APPdata string `json:"APPdata"`
// 	} `json:"payload"`
// 	MessageType  string `json:"messageType"`
// 	DeviceType   string `json:"deviceType"`
// 	DeviceID     string `json:"deviceId"`
// 	AssocAssetID string `json:"assocAssetId"`
// 	Imsi         string `json:"IMSI"`
// 	Imei         string `json:"IMEI"`
message AepReportArgs{
  int32 upPacketSN = 1;
  int32 upDataSN = 2;
  string topic = 3;
  int64 timestamp = 4;
  string tenantId = 5;
  string serviceId = 6;
  string protocol = 7;
  string productId = 8;
  message Payload {
    string APPdata = 1;
  }
  Payload payload = 9;
  string messageType = 10;
  string deviceType = 11;
  string deviceId = 12;
  string assocAssetId = 13;
  string IMSI = 14;
  string IMEI = 15;
}



service DeviceReport {
  rpc CreateDeviceReport(DeviceReportModel) returns(pbcommon.CommonResult){}
  rpc UpdateDeviceReport(DeviceReportModel) returns(pbcommon.CommonResult){}
  rpc DeleteDeviceReport(pbcommon.IdArgs) returns(pbcommon.CommonResult){}
  rpc FindDeviceReportById(pbcommon.IdArgs) returns(FindDeviceReportReplay){}
  rpc FindDeviceReportList(FindDeviceReportArgs) returns(FindDeviceReportReplay){}
  rpc AepReport(AepReportArgs) returns(pbcommon.CommonResult){}
}